--- a/public/foro/index.css
+++ b/public/foro/index.css
@@ -1177,6 +1177,7 @@ df-messenger {
 
     .verDiscusion > .top > .autor {
         align-items: center;
+        margin-top: 15px;
     }
 
     .comment,
