--- a/public/posts/css/arts.css
+++ b/public/posts/css/arts.css
@@ -670,6 +670,39 @@ li.categoriaLi {
     font-size: 20px;
 }
 
+body.dark .windowLink > div {
+    background-color: #555;
+    color: white;
+}
+
+.windowLink {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(51, 51, 51, 0.85);
+    z-index: 1000;
+}
+
+.windowLink > div {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: white;
+    background: white;
+    padding: 10px;
+    border-top: 15px solid orange;
+    border-radius: 10px;
+    min-width: 320px;
+}
+
 /* Footer */
 .footer {
     width: 100%;
