--- a/public/posts/css/arts.css
+++ b/public/posts/css/arts.css
@@ -295,6 +295,7 @@ body.dark .categoriasDeArticulo {
 
 .imgTextarea {
     max-width: 90%;
+    border: 1px solid black;
 }
 
 .articulo > .contenido > .cuerpo > #fecha {
