--- a/public/posts/css/arts.css
+++ b/public/posts/css/arts.css
@@ -508,8 +508,10 @@ body.dark .categoriasDeArticulo {
 
 .intro > .left > p {
     font-size: 22px;
+    font-weight: 600;
     text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
     padding: 0px 10px;
+    margin: 20px 0;
     text-align: justify;
 }
 
@@ -882,29 +884,6 @@ df-messenger {
 @media (max-width: 850px) {
     .intro {
         flex-direction: column;
-        background: url(../img/welcome.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 328px;
-    }
-    
-    .intro > .left {
-        backdrop-filter: blur(5px);
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-height: 460px;
-    }
-    
-    .intro > .left > p {
-        padding: 0px 20px;
-        margin: 20px 50px;
-    }
-    
-    .intro > .right {
-        display: none;
     }
 }
 
