--- a/public/css/index.css
+++ b/public/css/index.css
@@ -392,10 +392,11 @@ body.dark {
 }
 
 .articulos > .ulArticulos {
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     align-items: center;
+    flex-wrap: nowrap;
+    overflow-x: auto;
 }
 
 .articulos > .ulArticulos > .articulo.dark {
@@ -417,6 +418,7 @@ body.dark {
     box-shadow: 5px 5px 10px rgb(0 0 0 / 50%);
     padding: 15px;
     max-width: 90%;
+    min-width: 375px;
     min-height: 460px;
 }
 
