--- a/public/blog/articulos/css/index.css
+++ b/public/blog/articulos/css/index.css
@@ -1570,6 +1570,18 @@ df-messenger {
     font-size: 20px;
 }
 
+.noPremium > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.noPremium > div > .btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
 
