--- a/public/blog/configuracion/index.css
+++ b/public/blog/configuracion/index.css
@@ -569,6 +569,28 @@ body.dark #boolean {
     font-size: 20px;
 }
 
+#serPremium {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 75%;
+}
+
+#serPremium > span {
+    text-align: center;
+    font-weight: 600;
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+#serPremium > .btns {
+    margin-top: 15px;
+}
+
+
+
+
 
 /* Footer */
 .footer {
